# llm-cache

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
examples/: basic_cache.cpp  cached_openai.cpp  lru_eviction.cpp
include/: llm_cache.hpp
